--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -1,6 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box
 }
 
 html, body {
@@ -16,4 +17,5 @@ html, body {
 	width: 100%;
 	margin-right: auto;
 	margin-left: auto;
+	overflow:auto;
 }
