--- a/src/main/webapp/resources/css/rent.css
+++ b/src/main/webapp/resources/css/rent.css
@@ -15,9 +15,17 @@
 .info-lines {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .info-line {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 8px;
+}
+
+.date-div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
