--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,6 +1,6 @@
-body {
-    font-family: "Lucida Console", Courier, monospace;
-}
+/*body {*/
+/*    font-family: "Lucida Console", Courier, monospace;*/
+/*}*/
 
 .error {
     color: red;
