--- a/src/main/webapp/resources/css/rent.css
+++ b/src/main/webapp/resources/css/rent.css
@@ -10,6 +10,7 @@
     background: #fff;
     justify-content: space-between;
     align-items: flex-start;
+    border-radius: 10px;
 }
 
 .info-lines {
