--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -25,6 +25,27 @@ html, body {
 	padding: 35px;
 }
 
+.row {
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+}
+
+.row>[class^=col-] {
+	padding: 6px 0px;
+}
+
+.col-6 {
+	width: 100%;
+}
+
+@media screen and (min-width: 600px) {
+	.col-6 {
+		width: 50%;
+	}
+}
+
 a {
 	text-decoration: none;
 }
