--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -1,7 +1,8 @@
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box
+	box-sizing: border-box;
+	overflow-x:hidden;
 }
 
 html, body {
@@ -18,4 +19,47 @@ html, body {
 	margin-right: auto;
 	margin-left: auto;
 	overflow:auto;
+	padding:20px;
 }
+.input-group{
+	position:relative;
+	display:flex;
+	flex-wrap:wrap;
+	align-items: stretch;
+    width: 100%;
+}
+
+.btn {
+	display: block;
+	font-weight: 400;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	border: 1px solid transparent;
+	padding: 10px 7px;
+	margin-top: 10px;
+	font-size: 12px;
+	line-height: 1.5;
+	border-radius: .25rem;
+	color: #fff;
+	background-color: #007bff;
+	border-color: #007bff;
+	margin:0 auto;
+	marign-left:10px;
+}
+.text-field{
+	position: relative;
+    flex: 1 1 auto;
+    width: 1%;
+    min-width: 0;
+    margin-bottom: 0;
+}
+.content-wrapper{
+	width:1000px;
+	margin:0 auto;
+	max-height: calc(100vh - 85px);
+}
+a, u {
+    text-decoration: none;
+}
+
