--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -87,6 +87,7 @@ tbody td {
 
 .button {
 	display: inline-block;
+	margin: 5px;
 	text-align: center;
 	white-space: nowrap;
 	vertical-align: middle;
