--- a/src/main/webapp/resources/css/footer.css
+++ b/src/main/webapp/resources/css/footer.css
@@ -4,10 +4,11 @@
    bottom: 0;
    width: 100%;
    height:40px;
-  background-color: #333;
+    background-color: #36304a;
    color: white;
    text-align: center;
 }
+
 .footer-text{
 	 padding: 10px 16px;	
 }
