--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -9,7 +9,7 @@
 .form-container {
     width: 100%;
     max-width: 1100px;
-    height: 100%;
+    height: 90%;
     margin: auto;
     display: flex;
     justify-content: center;
@@ -39,4 +39,8 @@
     color: #555;
     font-size: 13px;
     opacity: 0.7;
+}
+
+.form-label {
+    padding-top: 5px;
 }
