--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -8,6 +8,7 @@
 
 li {
   float: left;
+  font-size: 13px;
 }
 
 li a {
@@ -18,6 +19,6 @@ li a {
   text-decoration: none;
 }
 
-li a:hover {
-  opacity: 0.5;
+li:hover {
+  background-color: rgba(255, 255, 255, 0.4);
 }
